# SCANNR

./: .gitattributes  .gitignore  BUILD_WINDOWS.md  CLAUDE.md  Cargo.toml  FUNCTIONALITY_CHECKLIST.md  GUI_FIXES_SUMMARY.md  LICENSE  OUI_EXPANSION_PLAN.md  README.md  WINDOWS_DEPLOYMENT.md  build.rs  contributing.md
.github/workflows/: ci.yml  release.yml
assets/: README.md  oui.txt
benches/: benchmark_portscan.rs
scripts/: create_icon.ps1
src/: address.rs  generated.rs  gui.rs  gui_main.rs  lib.rs  main.rs  oui.rs  tui.rs
src/benchmark/: mod.rs
src/scanner/: external.rs  mod.rs
src/scripts/: mod.rs
src/topology/: device.rs  discovery.rs  export.rs  geo.rs  graph.rs  layout.rs  mdns.rs  mod.rs  renderer.rs  widget.rs
