[package]
name = "SCANNR"
version = "1.1.2"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2021"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "GPL-3.0-only"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
petgraph = "0.6"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
pnet_packet = "0.35"
pnet_datalink = "0.35"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colored = "2.1"
async-std = "1.13"
futures = "0.3"
rlimit = "0.10"
log = "0.4"
env_logger = "0.11"
anstream = "0.6"
dirs = "5.0"
gcd = "2.1"
colorful = "0.3"
ansi_term = "0.12"
toml = "0.8"
cidr-utils = "0.6"
itertools = "0.13"
hickory-resolver = { version = "0.24", features = ["dns-over-rustls"] }
anyhow = "1.0"
text_placeholder = { version = "0.5", features = ["struct_context"] }
once_cell = "1.20"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
chrono = { version = "0.4", features = ["serde"] }
if-addrs = "0.14"
ipnetwork = "0.21"
tokio = { version = "1", features = ["full"] }
async-compat = "0.2"
whoami = "1.5"
glam = "0.29"
maxminddb = "0.27"
egui_graphs = "0.16.0-beta.0"
async-channel = "2.3"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.24", features = ["png", "jpeg"] }
ico = "0.3"
mdns-sd = "0.10"

[dev-dependencies]
parameterized = "2.0"
wait-timeout = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "scannr-cli"
path = "src/main.rs"

[[bin]]
name = "scannr-gui"
path = "src/gui_main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[[bench]]
name = "benchmark_portscan"
harness = false
